--- a/to_do_list/style.css
+++ b/to_do_list/style.css
@@ -1,56 +1,100 @@
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@700&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@300;500;600;700&display=swap');
 *{
 	margin: 0 auto;
 }
 body{
 	width: 100%;
 	height: 100%;
-	background: yellow !important;
+	background: #00b2d2 !important;
 }
-#content{
+.container{
 	width: 100%;
 	height: 100%;
 }
+.header{
+	width: 50%;
+	margin-top: 70px;
+	margin-bottom: 30px;
+}
 #title{
-	width: 30%;
-	margin-top: 10%;
-	background-color: red;
-	font-family: 'Noto Sans', sans-serif;
+	font-family: 'Raleway', sans-serif;
+	font-weight: 700;
+	font-size: 36px;
 	text-align: center;
-	font-size: 28px;
-	font-weight: 600;
+}
+.content{
+	width: 50%;
+	height: 80%;
 }
 #form{
-	width: 30%;
+	width: 100%;
 }
-#input_list{
+#new_list{
 	width: 79%;
-	height: 20%;
-	display: inline;
-	margin-top: 5px;
+	height: 50px;
+	font-family: 'Raleway', sans-serif;
+	font-weight: 300;
+	font-size: 20px;
 }
 #add_btn{
-	margin-top: 5px;
-	width: 19%;
-	height: 100%;
-	display: inline
-	outline: 0;
-	border: none;
-	background-color: pink;
-	border-radius: 3px;
-	padding-top: 6px;
-	padding-bottom: 5px;
+  background:#eeda25;
+  color:#fff;
+  border:none;
+  position:relative;
+  height:50px;
+  width: 20%;
+  cursor:pointer;
+  transition:800ms ease all;
+  outline:none;
+  font-family: 'Raleway', sans-serif;
+	font-weight: 500;
+	font-size: 16px;
 }
-.board{
-	background-color: blue;
-	width: 50%;
+#add_btn:hover{
+  background:#eeda25;
+  color:#58271c;
+}
+#add_btn:before, #add_btn:after{
+  content:'';
+  position:absolute;
+  top:0;
+  right:0;
+  height:2px;
+  width:0;
+  background: #58271c;
+  transition:400ms ease all;
+}
+#add_btn:after{
+  right:inherit;
+  top:inherit;
+  left:0;
+  bottom:0;
+}
+#add_btn:hover:before,#add_btn:hover:after{
+  width:100%;
+  transition:800ms ease all;
+}
+.to_do_lists{
+	width: 100%;
+	margin-top: 20px;
+	background-color: none;
+}
+ul{
+	padding: 0 !important;
 }
 li{
-  border-bottom: 1px solid #53BDFF;
-  padding-bottom: 15px;
-  padding-top: 15px;
-  font-size: 1.3em;
-  color: #2f4f4f;
+	list-style: none;
+	height: 50px;
+	line-height: 46px;
+	font-family: 'Raleway', sans-serif;
+	font-weight: 300;
+	border-radius: 10px;
+	background-color: rgba(255, 255, 255, 0.3);
+	font-size: 18px;
+	margin-bottom: 10px;
+}
+.footer{
+	width: 10%;
+	/*height: 70px;*/
+	background-color: white;
 }
