--- a/to_do_list/style.css
+++ b/to_do_list/style.css
@@ -21,6 +21,7 @@ body{
 	font-weight: 700;
 	font-size: 36px;
 	text-align: center;
+	color: #003038;
 }
 .content{
 	width: 50%;
@@ -93,8 +94,27 @@ li{
 	font-size: 18px;
 	margin-bottom: 10px;
 }
+:root{
+	--main-footer-height: 10%;
+}
 .footer{
-	width: 10%;
-	/*height: 70px;*/
-	background-color: white;
+	width: 100%;
+	bottom: 0;
+	left: 0;
+	position: fixed; 
+	height: 10%; 
+	background-color: #00768a;
+}
+#download{
+	font-family: 'Raleway', sans-serif;
+	font-weight: 500;
+	font-size: 18px;
+	color: #ffffff;
+	text-align: center;
+	height: 100%;
+	margin-top: 1.3%;
+}
+#download a{
+	text-decoration: none;
+	color: #00d8ff;
 }
